# clockify-cli

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
clockify_cli/: __main__.py  config.py  constants.py  main.py
clockify_cli/api/: client.py  exceptions.py  models.py
clockify_cli/db/: database.py  schema.py
clockify_cli/db/repositories/: clients.py  projects.py  sync_log.py  time_entries.py  users.py  workspaces.py
clockify_cli/fibery/: client.py  models.py  push_orchestrator.py
clockify_cli/sync/: orchestrator.py  progress.py
clockify_cli/tui/: app.py  styles.tcss  worker_utils.py
clockify_cli/tui/screens/: fibery_push_screen.py  main_menu.py  settings.py  sync_screen.py  time_entries.py
docs/: clockify-cli-prd.md  clockify-sync.prd
tests/: test_config.py
tests/api/: test_client.py
tests/db/: test_database.py  test_repositories.py
tests/fibery/: test_client.py  test_push_orchestrator.py
tests/sync/: test_orchestrator.py
