[project]
name = "clockify-cli"
version = "0.3.0"
description = "Full TUI Clockify time tracker sync and browser"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.86.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.2",
]

[project.scripts]
clockify-cli = "clockify_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
